BUG2392 [P] navigation overlap fixed
(cherry picked from commit 2cea805954ef6067113e4cd22b1c43280cb6c9d8)

--- a/src/client/src/Foundation/UI/common/scss/variables.scss
+++ b/src/client/src/Foundation/UI/common/scss/variables.scss
@@ -81,7 +81,7 @@ $sm-layout: '(max-width: 767px)';
 $xxs-layout: '(max-width: 479px)';
 $footer-switch-mode: '(max-width: 1024px)';
 $header-switch-mode: '(max-width: 1024px)';
-$header-switch-mobile-mode: '(max-width: 1101px)';
+$header-switch-mobile-mode: '(max-width: 1180px)';
 $header-switch-padding-mobile-mode: '(max-width: 991px) and (min-width: 768px)';
 $recommended-product-border-color: #ededf1;
 $placeholder-search-input-text-color: #797878;
